# openflights-website

./: .gitignore  CMakeLists.txt  CMakePresets.json  MyCppCode  MyCppCode.cpp
MyCppCode.dSYM/Contents/Resources/DWARF/: MyCppCode
MyCppCode.dSYM/Contents/Resources/Relocations/aarch64/: MyCppCode.yml
backend/: CMakeLists.txt
backend/src/: main.cpp  server.cpp  server.hpp
backend/src/database/: csv_parser.cpp  csv_parser.hpp  data_store.cpp  data_store.hpp
backend/src/handlers/: airline_handler.cpp  airline_handler.hpp  airport_handler.cpp  airport_handler.hpp  route_handler.cpp  route_handler.hpp
backend/src/models/: airline.hpp  airport.hpp  route.hpp
backend/src/utils/: string_utils.hpp
data/: airlines.csv  airlines_sample.csv  airports.csv  airports_sample.csv  routes.csv  routes_sample.csv
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css  main.jsx  output.css
frontend/src/components/: Navbar.jsx  SearchBar.jsx
frontend/src/pages/: About.jsx  Airlines.jsx  Airports.jsx  Home.jsx  Routes.jsx
frontend/src/utils/: api.js
